# virtualenv-asdf

./: .editorconfig  .flake8  .gitignore  LICENSE  README.md  pyproject.toml
src/_virtualenv_asdf/: discovery.py
tests/: test_discovery.py
